# libapi-base

./: .editorconfig  README.md  example.doap  index.html  libapi-base.spec  meson.build  meson.options
.forgejo/: check-abi
.gear/: libapi-base3.spec  rules
doc/: fix-doc  meson.build
doc/api-base/: meson.build
doc/serialize/: meson.build
lib/: api-error.vala  collection-factory.vala  convert.vala  data-object.vala  enums.vala  errors.vala  jsoner.vala  meson.build  utils.vala
lib/api-base/: base-urls.vala  content.vala  enums.vala  errors.vala  header.vala  meson.build  parameter.vala  request.vala  session.vala  utils.vala
lib/serialize/: collection-factory.vala  convert.vala  data-object.vala  enums.vala  errors.vala  ini-worker.vala  json-worker.vala  jsoner.vala  meson.build  settings.vala  type-famaly.vala  utils.vala  worker.vala
lib/serialize/collections/: array.vala  dict.vala
lib/serialize/ini/: deserialize.vala  serialize.vala  worker.vala
lib/serialize/json/: deserialize-async.vala  deserialize-sync.vala  deserialize.vala  serialize-async.vala  serialize-sync.vala  type-family.vala  worker.vala
lib/serialize/jsoner/: deserialize-async.vala  deserialize-sync.vala  errors.vala  serialize-async.vala  serialize-sync.vala
lib/serialize/object-helpers/: data-object.vala  has-complex-collections.vala  has-fallback.vala  type-family.vala
lib/serialize/worker/: array-support.vala  dict-support.vala  value-support.vala  worker.vala
lib/serialize/yaml/: deserialize.vala  serialize.vala  type-family.vala  worker.vala  yaml.vala
lib/session/: content.vala  header.vala  headers.vala  parameter.vala  post-content.vala  request.vala  session.vala
lib/soup-wrapper/: header.vala  headers.vala  parameter.vala  post-content.vala  request.vala  session.vala  soup-wrapper.vala
libapi-base-3/: ApiBase.BadStatusCodeError.BAD_GATEWAY.html  ApiBase.BadStatusCodeError.BAD_REQUEST.html  ApiBase.BadStatusCodeError.CONFLICT.html  ApiBase.BadStatusCodeError.FORBIDDEN.html  ApiBase.BadStatusCodeError.GATEWAY_TIMEOUT.html  ApiBase.BadStatusCodeError.GONE.html  ApiBase.BadStatusCodeError.INTERNAL_SERVER_ERROR.html  ApiBase.BadStatusCodeError.METHOD_NOT_ALLOWED.html  ApiBase.BadStatusCodeError.NOT_FOUND.html  ApiBase.BadStatusCodeError.NOT_IMPLEMENTED.html  ApiBase.BadStatusCodeError.PAYLOAD_TOO_LARGE.html  ApiBase.BadStatusCodeError.REQUEST_TIMEOUT.html  ApiBase.BadStatusCodeError.SERVICE_UNAVAILABLE.html  ApiBase.BadStatusCodeError.TOO_MANY_REQUESTS.html  ApiBase.BadStatusCodeError.UNAUTHORIZED.html  ApiBase.BadStatusCodeError.UNKNOWN.html  ApiBase.BadStatusCodeError.UNSUPPORTED_MEDIA_TYPE.html  ApiBase.BadStatusCodeError.html  ApiBase.Case.AUTO.html  ApiBase.Case.CAMEL.html  ApiBase.Case.KEBAB.html  ApiBase.Case.SNAKE.html  ApiBase.Case.html  ApiBase.CookieJarType.DB.html  ApiBase.CookieJarType.NONE.html  ApiBase.CookieJarType.TEXT.html  ApiBase.CookieJarType.html  ApiBase.DataObject.DataObject.html  ApiBase.DataObject.fill_from_json.html  ApiBase.DataObject.from_json.html  ApiBase.DataObject.html  ApiBase.DataObject.to_json.html  ApiBase.Header.Header.html  ApiBase.Header.html  ApiBase.Header.name.html  ApiBase.Header.value.html  ApiBase.HttpMethod.CONNECT.html  ApiBase.HttpMethod.DELETE.html  ApiBase.HttpMethod.GET.html  ApiBase.HttpMethod.HEAD.html  (+114 more)
libapi-base-4/: ApiBase.BadStatusCodeError.BAD_GATEWAY.html  ApiBase.BadStatusCodeError.BAD_REQUEST.html  ApiBase.BadStatusCodeError.CONFLICT.html  ApiBase.BadStatusCodeError.FORBIDDEN.html  ApiBase.BadStatusCodeError.GATEWAY_TIMEOUT.html  ApiBase.BadStatusCodeError.GONE.html  ApiBase.BadStatusCodeError.INTERNAL_SERVER_ERROR.html  ApiBase.BadStatusCodeError.METHOD_NOT_ALLOWED.html  ApiBase.BadStatusCodeError.NOT_FOUND.html  ApiBase.BadStatusCodeError.NOT_IMPLEMENTED.html  ApiBase.BadStatusCodeError.PAYLOAD_TOO_LARGE.html  ApiBase.BadStatusCodeError.REQUEST_TIMEOUT.html  ApiBase.BadStatusCodeError.SERVICE_UNAVAILABLE.html  ApiBase.BadStatusCodeError.TOO_MANY_REQUESTS.html  ApiBase.BadStatusCodeError.UNAUTHORIZED.html  ApiBase.BadStatusCodeError.UNKNOWN.html  ApiBase.BadStatusCodeError.UNSUPPORTED_MEDIA_TYPE.html  ApiBase.BadStatusCodeError.html  ApiBase.Case.AUTO.html  ApiBase.Case.CAMEL.html  ApiBase.Case.KEBAB.html  ApiBase.Case.SNAKE.html  ApiBase.Case.html  ApiBase.CookieJarType.DB.html  ApiBase.CookieJarType.NONE.html  ApiBase.CookieJarType.TEXT.html  ApiBase.CookieJarType.html  ApiBase.DataObject.DataObject.html  ApiBase.DataObject.fill_from_json.html  ApiBase.DataObject.html  ApiBase.DataObject.to_json.html  ApiBase.Header.html  ApiBase.Header.name.html  ApiBase.Header.value.html  ApiBase.HttpMethod.CONNECT.html  ApiBase.HttpMethod.DELETE.html  ApiBase.HttpMethod.GET.html  ApiBase.HttpMethod.HEAD.html  ApiBase.HttpMethod.OPTIONS.html  ApiBase.HttpMethod.PATCH.html  (+101 more)
libapi-base-5/: ApiBase.ArrayFactory.ArrayFactory.html  ApiBase.ArrayFactory.build.html  ApiBase.ArrayFactory.html  ApiBase.BadStatusCodeError.BAD_GATEWAY.html  ApiBase.BadStatusCodeError.BAD_REQUEST.html  ApiBase.BadStatusCodeError.CONFLICT.html  ApiBase.BadStatusCodeError.FORBIDDEN.html  ApiBase.BadStatusCodeError.GATEWAY_TIMEOUT.html  ApiBase.BadStatusCodeError.GONE.html  ApiBase.BadStatusCodeError.INTERNAL_SERVER_ERROR.html  ApiBase.BadStatusCodeError.METHOD_NOT_ALLOWED.html  ApiBase.BadStatusCodeError.NOT_FOUND.html  ApiBase.BadStatusCodeError.NOT_IMPLEMENTED.html  ApiBase.BadStatusCodeError.PAYLOAD_TOO_LARGE.html  ApiBase.BadStatusCodeError.REQUEST_TIMEOUT.html  ApiBase.BadStatusCodeError.SERVICE_UNAVAILABLE.html  ApiBase.BadStatusCodeError.TOO_MANY_REQUESTS.html  ApiBase.BadStatusCodeError.UNAUTHORIZED.html  ApiBase.BadStatusCodeError.UNKNOWN.html  ApiBase.BadStatusCodeError.UNSUPPORTED_MEDIA_TYPE.html  ApiBase.BadStatusCodeError.html  ApiBase.Case.AUTO.html  ApiBase.Case.CAMEL.html  ApiBase.Case.KEBAB.html  ApiBase.Case.html  (+148 more)
tests/: convert-test.vala  ini-test.vala  jsoner-test.vala  meson.build  session-test.vala  soup-wrapper-test.vala  test-data.gresource.xml  yaml-test.vala
vapi/: Yaml-0.1.gir  meson.build  yaml-0.1.deps  yaml-0.1.vapi
(+500 files in other folders)
